<resources>
    <string name="app_name">PhotoEng</string>
    <string name="camera_text">Наведите камеру на текст, который нужно перевести</string>
    <string name="back_text">Назад</string>
    <string name="text_reader_first_text">Введите текст для перевода</string>
    <string name="research_text">Перевести</string>
    <string name="say">Озвучить</string>
    <string name="scane_text">Сканировать</string>
    <string name="dictionary_text">Мой словарь</string>
    <string name="learn">Учить</string>
    <string name="Say_text">Сказать</string>
    <string name="learn_text">Изучать</string>
    <string name="delete_text">Удалить</string>
    <string name="foreground_text">Учим слова</string>
    <string name="training">Тренировать</string>
    <string name="training_edittext_text">Введите слово на английском</string>
    <string name="check_text">Проверить</string>
    <string name="result_button_again_text">Eще раз</string>
    <string name="result_button_back_text">Назад</string>
    <string name="toolbar_textview_text">Готово</string>
    <string name="start_learning_button_text">Старт</string>
    <string name="stop_learning_button_text">Стоп</string>
    <string name="dictionary">Словарь</string>
    <string name="train">Учить</string>
    <string name="home">Домой</string>
    <string name="next">Дальше</string>
    <string name="cross">x</string>
    <string name="what_is_learning_title">Как это работает?</string>
    <string name="what_is_learning_text">Вы выбераете слова для изучения и PhotoEng надиктовывает вам их, по 10 раз каждое. Мы рекомендуем повторять слова про себя. 0x1F3A7</string>
    <string name="dont_show_more">Больше не показывать</string>
    <string name="ru">ru</string>
    <string name="eng">eng</string>

</resources>

